@@ -1,0 +1,5 @@
+#!/bin/sh
+
+set -e
+
+$SORT_DCTRL < 0006.in
